# molxspec

./: .gitignore  EnergyLevels.ipynb  FirstModels.ipynb  ProcessGNPS.ipynb  README.md  bla.py  environment.yaml  evaluate.ipynb  graphs.py  inspect.ipynb  models.py  optimize_geometry_for_gnps.py  pyproject.toml  shuffle_and_split.sh  sketch.ipynb  train_bert.py  train_egnn.py  train_graphconv.py  train_mlp.py  training_setup.py  utils.py
molxspec/: chemberta.py  egnn.py  graphs.py  models.py  mol2spec.py  trainer.py  training_setup.py  utils.py
molxspec/cli/: mol2spec.py
molxspec/training/: train_bert.py  train_egnn.py  train_graphconv.py  train_mlp.py
notebooks/: FirstModels.ipynb  ProcessGNPS.ipynb  evaluate.ipynb  sketch.ipynb
preprocess/: optimize_geometry_for_gnps.py  process_gnps.py
training/: train_bert.py  train_egnn.py
