[tool.poetry]
name = "molxspec"
version = "0.1.0"
description = ""
authors = ["Pablo Cordero <dimenwarper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.9.1"
torch-cluster = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_cluster-1.5.9-cp39-cp39-linux_x86_64.whl", platform = "linux"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_scatter-2.0.9-cp39-cp39-linux_x86_64.whl", platform = "linux"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_sparse-0.6.12-cp39-cp39-linux_x86_64.whl", platform = "linux"}
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_spline_conv-1.2.1-cp39-cp39-linux_x86_64.whl", platform = "linux"}
torch-geometric = "^2.0.2"
rdkit-pypi = "^2021.9.2"
transformers = "^4.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
