[tool.poetry]
name = "molxspec"
version = "0.1.0"
description = "Machine learning models for predicting molecule <-> MS2 ESI spectra"
authors = ["Pablo Cordero <dimenwarper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
rdkit-pypi = "^2021.9.2"
transformers = "^4.12.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mol2spec = "molxspec.cli.mol2spec:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
